# CryptoMathAudit

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GUIDE_BEFORE_SUBMIT.md  LICENSE  README.md  SECURITY.md
bounties/: active-targets.md  methodology.md
bounties/findings/: firedancer_ed25519_deepdive.txt  firedancer_h1_results.txt  firedancer_h4_results.txt  firedancer_h5_results.txt  firedancer_h6_local_test.txt  firedancer_h6_plan.txt  firedancer_h6_results.txt  firedancer_h6_valid_results.txt  firedancer_recon.txt  firedancer_scope_check.txt  firedancer_zip215_research.txt  hyperlane_deployment_status.txt  hyperlane_immunefi_report.md  hyperlane_recon.txt  hyperlane_resubmit_plan.txt  hyperlane_weighted_multisig_deepdive.txt  layerzero_recon.txt  layerzero_vector4_replay.txt  layerzero_vector5_admin.txt  monero_oxide_deepdive.txt  new_targets_research.txt  new_targets_round2.txt  risc0_deepdive.txt  serai_deepdive.txt  sp1_deepdive.txt  threshold_deepdive.txt  wormhole_recon.txt  young_targets_research.txt  zksync_blake2s_deepdive.txt  zksync_era_deepdive.txt  zksync_os_deepdive.txt  zksync_os_gates.txt  zksync_os_immunefi_report.md  zksync_os_planted_bug.txt  zksync_os_ram.txt  zksync_recon.txt  (+2 more)
knowledge/: bounty_strategy_v2.md  solidity_security_guide.md
targets/firedancer/test_harness_rust/: Cargo.toml  README.md  results.json
targets/firedancer/test_harness_rust/src/: main.rs  test_vectors.rs
tools/: verify_bug.md  verify_sp1_verdict.txt  verify_threshold_verdict.txt  verify_zksync_reframe_verdict.txt  verify_zksync_verdict.txt  verify_zkverify_verdict.txt
(+32 files in other folders)
